<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cl_timerView"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/stop_watch"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cl_loss_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/cl_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/cl_cl_train_button"
                android:layout_width="44dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cl_model_train" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/cl_cl_rehearsal_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cl_rehearsal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cl_test_Target5"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/description_1"
                app:drawableTopCompat="@drawable/target_5" />

            <TextView
                android:id="@+id/cl_test_Target6"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/description_2"
                app:drawableTopCompat="@drawable/target_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/cl_test_Target7"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/description_3"
                app:drawableTopCompat="@drawable/target_7" />

            <TextView
                android:id="@+id/cl_test_Target8"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/edge"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/description_4"
                app:drawableTopCompat="@drawable/target_8" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>