<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/test_timerView"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/stop_watch"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_resultView"
        android:layout_width="238dp"
        android:layout_height="89dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/train_model_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/train_model_run"
        android:layout_width="404dp"
        android:layout_height="77dp"
        android:layout_marginBottom="100dp"
        android:text="@string/model_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>