<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/loss_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transfer_timerView"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/stop_watch"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/train_mode_button"
                    android:layout_width="44dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="CL Train Mode" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/cl_train_mode_button"
                    android:layout_width="44dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/cl_model_train" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/test_Target1"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingTop="1dp"
                    android:text="@string/description_1"
                    app:drawableTopCompat="@drawable/target_5" />

                <TextView
                    android:id="@+id/test_Target2"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingTop="1dp"
                    android:text="@string/description_2"
                    app:drawableTopCompat="@drawable/target_6" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/test_Target3"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingTop="1dp"
                    android:text="@string/description_3"
                    app:drawableTopCompat="@drawable/target_7" />

                <TextView
                    android:id="@+id/test_Target4"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/edge"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingTop="1dp"
                    android:text="@string/description_4"
                    app:drawableTopCompat="@drawable/target_8" />
            </TableRow>

        </TableLayout>

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>