<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/ActivityContentBase"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/cnn2020_click_area"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edge"
            android:gravity="center"
            android:text="@string/cnn2020"
            android:textSize="24dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cnn_blstm_click_area"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/innohar_click_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnn2020_click_area">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edge"
            android:gravity="center"
            android:text="@string/cnn_2stream"
            android:textSize="24dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/innohar_click_area"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edge"
            android:gravity="center"
            android:text="@string/innohar"
            android:textSize="24dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>